Refactor to use CalenderEvent instead of dto. As well as to make methods easier to understand